--- a/task-manager-frontend/package.json
+++ b/task-manager-frontend/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aws4": "^1.13.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
